Add controls direction left and right

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
       <div class="gameboy__controls">
         <div class="gameboy__controls-direction">
           <div class="gameboy__controls-direction-vertical"></div>
-          <div class="gameboy__controls-direction-horizontal"></div>
+          <div class="gameboy__controls-direction-horizontal">
+            <button class="gameboy__controls-direction-horizontal-left"></button>
+            <button class="gameboy__controls-direction-horizontal-right"></button>
+          </div>
         </div>
         <div class="gameboy__controls-ab"></div>
         <div class="gameboy__controls-start"></div>
